@@ -22,6 +22,7 @@ This version has not been released yet.
  * Added Server-Sent Events protocol to db changes API.
  * Moved the JS test suite to the CLI
  * Make password hashing synchronous when using the /_config/admins API.
+ * Added utc_id UUID algorithm.
 
 Version 1.2.1
 -------------
